# 309-153router

./: .gitignore  README.md  diagnose_db.sh  test_optrouter.sh
gateway/: Cargo.toml
gateway-bk/config/: models.toml
gateway-bk/src/proxy/: mod.rs
gateway-bk/src/router/: mod.rs
gateway-bk/src/startup/: healthcheck.rs  healthcheck.rs-0308
gateway/config/: dev.toml
gateway/src/: error.rs  main.rs
gateway/src/api/: chat.rs  health.rs  models.rs
gateway/src/application/: chat_service.rs
gateway/src/db/: mod.rs  pg.rs  types.rs
gateway/src/proxy/: mod.rs
gateway/src/router/: mod.rs  model_router.rs  registry.rs
web/: package-lock.json
web/app/: globals copy.css  globals.css  layout.tsx  page.tsx
web/app/(auth)/api/auth/login/: route.ts
web/app/(auth)/api/auth/register/: route.ts
web/app/(auth)/components/: auth-guard.tsx
web/app/(auth)/domain/: auth.service.ts
web/app/(auth)/login/: page.tsx
web/app/(auth)/register/: page.tsx
web/app/(dashboard)/components/: activity-log.tsx  api-keys.tsx  model-usage.tsx  popular-models.tsx  provider-usage.tsx  quick-start.tsx  sidebar.tsx  stat-cards.tsx  top-bar.tsx  usage-chart.tsx
web/app/(dashboard)/docs/: page.tsx
web/app/(dashboard)/domain/: dashboard.service.ts
web/app/(home)/components/: code-example.tsx  faq.tsx  hero.tsx  layout-text-flip.tsx  navbar.tsx  testimonials.tsx
web/app/(invite)/components/: invite-chart.tsx  invite-code-usage-pie.tsx  invite-stats-cards.tsx  invite-time-distribution-pie.tsx  invite-user-list.tsx
web/app/(invite)/domain/: invite.repo.ts
web/app/(invite)/invite/: page.tsx
web/app/(promo)/components/: promo-cta.tsx  promo-hero.tsx
web/app/(promo)/promo/: page.tsx
web/app/(superadmin)/api/superadmin/invite-rewards/: route.ts
web/app/(superadmin)/components/: superadmin-guard.tsx
web/app/(superadmin)/superadmin/: page.tsx
web/app/(superadmin)/superadmin/invite-rewards/: page.tsx
web/app/api/chat/: route.ts
web/app/api/keys/: route.ts
web/app/api/usage/: route.ts
web/components/: footer.tsx
web/components/dashboard/: activity-log.tsx  api-keys.tsx  dashboard-shell.tsx  model-usage.tsx  sidebar.tsx  stat-cards.tsx  usage-chart.tsx
web/lib/: auth-client.ts  db.ts  dingtalk.ts  gateway.ts
web/lib/api/: invite.ts
web/lib/types/: invite.ts
web/prisma/: schema.prisma
web/styles/: globals.css
项目文档/: 0-测试常用命令.md  0-项目说明.md  00-计费测试.md  1-用户 api 的实现方式.md  10-待开发.md  2-项目架构说明.md  21-接入新模型供应商.md  3-模型调用技术指标.md  31-用户分类.md  32-seo 相关.md  9-Gateway-用户调用文档.md
